--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,15 @@ frontend/node_modules/.cache/default-development/0.pack
 # Environment files
 *.env
 *.env.*
+
+# Backup files
+*.backup
+*.backup2
+*.backup3
+*_fix.py
+*_fix.js
+*.log
+
+# Environment
+backend/.env
+frontend/.env
